# Stardust

./: .gitignore  CMakeLists.txt  LICENSE  README.md  minify.cmd
src/: Bullets.cpp  Bullets.h  CMakeLists.txt  Common.h  Dll.cpp  LocutusAIModule.cpp  LocutusAIModule.h  Opponent.cpp  Opponent.h  Producer.cpp  Scout.cpp  Scout.h  StardustAIModule.cpp  StardustAIModule.h  UnitEventDispatcher.h  Workers.h
src/Builder/: Block.cpp  Block.h  BuildLocation.h  Builder.cpp  Builder.h  Building.cpp  Building.h  BuildingPlacement.cpp  BuildingPlacement.h  BuildingPlacement_Walls.cpp  ForgeGatewayWall.h
src/Builder/Blocks/: 10x3.h  10x6.h  12x5.h  12x8.h  13x6.h  14x3.h  14x6.h  16x5.h  16x8.h  17x6.h  18x3.h  18x6.h  2x2.h  2x4.h  4x2.h  4x4.h  4x5.h  4x8.h  5x2.h  5x4.h  6x3.h  8x2.h  8x5.h  8x8.h  StartAboveAndBelowLeft.h  StartBottomHorizontal.h  StartBottomLeft.h  StartBottomLeftHorizontal.h  StartCompactLeft.h  StartCompactLeftHorizontal.h  StartCompactRight.h  StartCompactRightVertical.h  StartNormalLeft.h  StartNormalRight.h  StartTopLeftHorizontal.h
src/General/: AttackBaseSquad.h  CombatSimResult.cpp  CombatSimResult.h  General.cpp  General.h  Squad.cpp  Squad.h  UnitCluster.cpp  UnitCluster.h
src/General/Squads/: AttackBaseSquad.cpp  AttackBaseSquad.h  CorsairSquad.cpp  CorsairSquad.h  DefendBaseSquad.cpp  DefendBaseSquad.h  DefendWallSquad.cpp  DefendWallSquad.h  EarlyGameDefendMainBaseSquad.cpp  EarlyGameDefendMainBaseSquad.h  MopUpSquad.cpp  MopUpSquad.h  WorkerDefenseSquad.cpp  WorkerDefenseSquad.h
src/General/UnitCluster/: Arbiters.cpp  Attack.cpp  CombatSim.cpp  Detectors.cpp  MeleeTargeting.cpp  Move.cpp  RangedTargeting.cpp  Regroup.cpp  Targeting.cpp  UnitCluster.cpp
src/Instrumentation/: CherryVis.cpp  CherryVis.h  DebugFlag_CombatSim.h  DebugFlag_GridUpdates.h  DebugFlag_UnitOrders.h  Log.cpp  Log.h  Timer.cpp  Timer.h
src/Map/: Base.cpp  Base.h  Choke.cpp  Choke.h  DefaultMapSpecificOverride.h  Map.cpp  Map.h  MapSpecificOverride.h  Map_Walkability.cpp  NoGoAreas.cpp  NoGoAreas.h  PathFinding.cpp  PathFinding.h  Plasma.cpp  StartingLocation.h
src/Map/MapSpecificOverrides/: Alchemist.cpp  Alchemist.h  Arcadia.cpp  Arcadia.h  Colosseum.cpp  Colosseum.h  CrossingField.cpp  CrossingField.h  Destination.cpp  Destination.h  EmpireOfTheSun.cpp  EmpireOfTheSun.h  Fortress.cpp  Fortress.h  GodsGarden.cpp  GodsGarden.h  JudgmentDay.cpp  JudgmentDay.h  Katrina.cpp  Katrina.h  MatchPoint.cpp  MatchPoint.h  NeoMoonGlaive.cpp  NeoMoonGlaive.h  Outsider.cpp  Outsider.h  Plasma.cpp  Plasma.h  Python.cpp  Python.h  TauCross.cpp  TauCross.h
src/Map/PathFinding/: NavigationGrid.cpp  NavigationGrid.h  PathFinding.cpp  PathFinding.h  PathFinding_BWEM.cpp  PathFinding_Grids.cpp  PathFinding_Search.cpp
src/Players/: Grid.cpp  Grid.h  Players.cpp  Players.h  UpgradeTracker.cpp  UpgradeTracker.h
src/Producer/: Producer.cpp  Producer.h  ProductionGoal.cpp  ProductionGoal.h  ProductionLocation.h
src/Producer/ProductionGoals/: UnitProductionGoal.h  UpgradeProductionGoal.cpp  UpgradeProductionGoal.h
src/Strategist/: ContinuousWorkerProduction.cpp  DarkTemplar.h  Dragoons.h  Opening.h  OpponentEconomicModel.cpp  OpponentEconomicModel.h  Play.cpp  Play.h  ProductionGoal.h  Strategies.cpp  Strategies.h  Strategist.cpp  Strategist.h  StrategyEngine.h
src/Strategist/StrategyEngines/: Expansions.cpp  PvP.cpp  PvP.h  PvT.cpp  PvT.h  PvU.cpp  PvU.h  PvZ.cpp  PvZ.h  Upgrades.cpp
src/Units/: MyCannon.h  MyCarrier.h  MyCorsair.h  MyDragoon.h  MyUnit.cpp  MyUnit.h  MyWorker.h  Resource.cpp  Resource.h  Unit.cpp  Unit.h  Units.cpp  Units.h
src/Units/MyUnit/: MyCannon.cpp  MyCarrier.cpp  MyCorsair.cpp  MyDragoon.cpp  MyUnit.cpp  MyUnit_Move.cpp  MyUnit_Orders.cpp  MyWorker.cpp
src/Units/Unit/: Unit_Info.cpp  Unit_Update.cpp
src/Util/: Boids.cpp  Boids.h  Geo.cpp  Geo.h  UnitUtil.cpp  UnitUtil.h  UpgradeOrTechType.cpp  UpgradeOrTechType.h
src/Workers/: WorkerOrderTimer.cpp  WorkerOrderTimer.h  Workers.cpp  Workers.h
test/: AiideMapAnalysis.cpp  BWTest.cpp  BWTest.h  CMakeLists.txt  DoNothingModule.h  Maps.cpp  Maps.h  Readme.md  SelfPlay.cpp  Steamhammer.cpp  TestAttackBasePlay.h  TestMainArmyAttackBasePlay.h  cleanup.sh
test/Builder/: BuildAtExpansions.cpp  ChokeCannonLocations.cpp  ForgeGatewayWalls.cpp
test/FullGame/: BananaBrain.cpp  Crona.cpp  Iron.cpp  Locutus.cpp  McRave.cpp  SAIDA.cpp  SelfPlay.cpp  Steamhammer.cpp
test/General/: CombatSimEvaluation.cpp
test/Infrastructure/: BWTest.cpp  BWTest.h  Maps.cpp  Maps.h
test/Infrastructure/Plays/: TestAttackBasePlay.h  TestMainArmyAttackBasePlay.h
test/Infrastructure/StrategyEngines/: DoNothingStrategyEngine.h  UpgradeStrategyEngine.h
test/Micro/: Cannons.cpp  MovingShot.cpp
test/Misc/: APMLimits.cpp  BlockStuckUnits.cpp  BulletRemoveTimer.cpp  CombatSim.cpp  DistanceCalculations.cpp  EncryptWindowsBinary.cpp  FindStartLocationSeeds.cpp  MapAnalysis.cpp  MemoryLeaks.cpp  MiningEfficiency.cpp  MiningLocations.cpp  MiningTimings.cpp  OptimizeMining.cpp  ProbeMovingBuild.cpp  PylonPower.cpp  Surrender.cpp  UnitAttackTimings.cpp
test/Players/: AttackDamage.cpp  Grids.cpp
test/Producer/: ProducesDragoonsWhileTechingToDT.cpp
test/Replays/: GetReplaySeeds.cpp
test/Scenarios/: AoEAvoidance.cpp  Arcs.cpp  AttackBunker.cpp  AttackStaticDefense.cpp  CarrierMicro.cpp  ContainAtChoke.cpp  ContainTanks.cpp  DragoonKiting.cpp  DragoonSticking.cpp  ForgeExpandWallDefense.cpp  HighGround.cpp  MaxSupply.cpp  MineralWalking.cpp  ObserverSniping.cpp  RushDefense.cpp  SpiderMines.cpp  SquadMovement.cpp  StandGround.cpp  StuckDarkTemplar.cpp  SunkenContain.cpp  Targeting.cpp
test/Strategist/: OpponentEconomicModelTests.cpp
test/Units/: Cannons.cpp  Hallucinations.cpp
test/macro/: TakeNaturalExpansionTests.cpp
test/map/: ChokeAnalysis.cpp  DistanceCalculations.cpp  Initialization.cpp  NaturalLayouts.cpp  NaturalLocations.cpp  NavigationGrid.cpp  PathFindingSearch.cpp
test/plays/Defensive/: DefendBase.cpp  DefendBase_WorkerDefense.cpp  DefendBase_WorkerDefense_Crona.cpp
test/plays/MapSpecific/: Plasma.cpp
(+263 files in other folders)
